test/asm/reference-undefined-sym.asm
SECTION "sec", ROM0
	db X

X = 2
